--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -23,9 +23,54 @@ h1 {
     z-index: 10;
 }
 
+header{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+nav{
+    width: 100%;
+}
+.links{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    padding: 30px 0;
+}
+
+ul{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+    gap: 20%;
+}
+
+li{
+    list-style: none;
+}
+
+li a{
+    text-decoration: none;
+    color: #fff;
+    font-size: 30px;
+    font-weight: bold;
+    transition: all .2s ease;
+}
+
+li a:hover{
+    color: rgb(218, 216, 216);
+}
+
 button{
     font-family: 'Poppins', sans-serif; /* Aplica la fuente Poppins */
-    
+}
+
+.active{
+    padding: 3px 20px;
+    border-radius: 100px;
+    background-color: hsla(0, 0%, 0%, 0.208);
 }
 
 .properties {
@@ -39,7 +84,7 @@ button{
     background-color: #fff;
     border-radius: 8px;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-    width: 300px;
+    width: 100%;
     padding: 20px;
     text-align: center;
 }
@@ -170,7 +215,7 @@ button{
     padding: 20px;
     border-radius: 8px;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-    width: 30%;
+    width: 100%;
     transition: transform 0.3s ease; /* Transición de tamaño */
 }
 
